# webgpu-cpp

./: .gitignore  CMakeLists.txt
resources/: shader.wgsl  webgpu.txt
src/: main.cpp  utils.cpp  utils.h  webgpu-release.h  webgpu-utils.cpp  webgpu-utils.h
